# opendeck-graphs

./: .gitignore  Cargo.toml  README.md  manifest.json  pi.html
.github/workflows/: build.yml
src/: gfx.rs  graph_data.rs  main.rs  plugin.rs  sensors.rs  websocket.rs
