[package]
name = "oa-graphs"
version = "1.0.0"
edition = "2021"

[dependencies]
lm-sensors = "0.3"
openaction = "2.1"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.24"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
async-trait = "0.1"
anyhow = "1.0"
image = "0.25"
base64 = "0.22"
imageproc = "0.25"
ab_glyph = "0.2"
futures-util = "0.3"
sysinfo = "0.33"
nvml-wrapper = "0.10"
